# VEDA-Qt-Bank

./: .gitignore  CMakeLists.txt.user.68d4367  Doxyfile  README.md  accountwidget.h  addaccountdialog.cpp  bankmodel.cpp  completionwidget.h  dashboardwidget.h  loginwidget.cpp  mainwindow.cpp  mainwindow.h  registerdialog.cpp  verificationwidget.cpp  verificationwidget.h
VEDA-Qt-BANK/: .gitignore  CMakeLists.txt  Doxyfile  accountwidget.cpp  addaccountdialog.cpp  addaccountdialog.h  bankmodel.cpp  bankmodel.h  checkanimationwidget.cpp  checkanimationwidget.h  completionwidget.cpp  completionwidget.h  dashboardwidget.cpp  dashboardwidget.h  dbmanager.cpp  dbmanager.h  loginwidget.cpp  loginwidget.h  main.cpp  main.qml  mainwindow.cpp  mainwindow.h  registerdialog.h  resources.qrc  transactionwidget.cpp  transactionwidget.h  verificationwidget.cpp
VEDA-Qt-BANK/docs/html/: _r_e_a_d_m_e_8md.html  accountwidget_8cpp.html  accountwidget_8cpp__incl.map  accountwidget_8h.html  accountwidget_8h.js  accountwidget_8h__dep__incl.md5  addaccountdialog_8h.html  addaccountdialog_8h.js  addaccountdialog_8h__incl.md5  annotated.html  annotated_dup.js  bankmodel_8cpp.html  bankmodel_8cpp__incl.map  bankmodel_8h.js  bankmodel_8h__dep__incl.map  bankmodel_8h__dep__incl.md5  bankmodel_8h__incl.map  bankmodel_8h_source.html  checkanimationwidget_8h__dep__incl.md5  checkanimationwidget_8h_source.html  class_account.html  class_account__coll__graph.map  class_account_list_item-members.html  class_account_list_item.html  class_account_list_item_a420b430f1ef3f9965273ab2f610ec15a_cgraph.md5  class_account_list_item_a8d92d399568a80640ce6c282801f4ccf_cgraph.map  class_account_list_item_a8d92d399568a80640ce6c282801f4ccf_cgraph.md5  class_account_list_item_a8d92d399568a80640ce6c282801f4ccf_icgraph.md5  class_account_widget-members.html  class_account_widget__inherit__graph.map  class_account_widget_a3a275d3802bf079ac8f8eca686a81eee_icgraph.map  class_account_widget_ad3fe0d788e4be599d2afc321692532ca_cgraph.map  class_account_widget_ad698a4540e905c12343cd067fc9abf4c_icgraph.map  class_account_widget_ad698a4540e905c12343cd067fc9abf4c_icgraph.md5  class_add_account_dialog__inherit__graph.map  class_add_account_dialog_a71da9768cfdd6b7e26f2fbfea7782147_icgraph.map  class_add_account_dialog_a71da9768cfdd6b7e26f2fbfea7782147_icgraph.md5  class_add_account_dialog_ac9dbb98378174403dbcef089d9cab47b_cgraph.md5  class_bank_model.js  class_bank_model_a0ffdefbb4cb89984d6288b1d32a5b911_cgraph.map  (+130 more)
VEDA-Qt-BANK/docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_6.js  all_7.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_1.js  classes_3.js  files_1.js  files_2.js  files_3.js  files_4.js  functions_1.js  functions_10.js  functions_4.js  functions_9.js  functions_c.js  pages_1.js  pages_2.js  searchdata.js  variables_0.js  variables_2.js  variables_3.js
VEDA-Qt-BANK/docs/man/man3/: Account.3  AccountListItem.3  AddAccountDialog.3  CompletionWidget.3  DashboardWidget.3  LoginWidget.3  RegisterDialog.3  Transaction.3  accountwidget.cpp.3  accountwidget.h.3  bankmodel.cpp.3  checkanimationwidget.cpp.3  completionwidget.h.3  dashboardwidget.cpp.3  loginwidget.h.3  main.cpp.3  registerdialog.cpp.3  transactionwidget.h.3  verificationwidget.cpp.3
VEDA-Qt-BANK/styles/: style.qss
docs/: Doxyfile  accountwidget_8cpp.html  accountwidget_8cpp__incl.map  accountwidget_8h.html  accountwidget_8h__dep__incl.map  accountwidget_8h__incl.map  accountwidget_8h_source.html  addaccountdialog_8cpp.html  addaccountdialog_8cpp__incl.map  addaccountdialog_8cpp__incl.md5  addaccountdialog_8h.html  addaccountdialog_8h__incl.map  addaccountdialog_8h__incl.md5  addaccountdialog_8h_source.html  bankmodel_8cpp.html  bankmodel_8cpp__incl.map  bankmodel_8cpp__incl.md5  bankmodel_8h__dep__incl.map  checkanimationwidget_8h__dep__incl.map  checkanimationwidget_8h__dep__incl.md5  checkanimationwidget_8h__incl.map  checkanimationwidget_8h__incl.md5  class_account__coll__graph.md5  class_account_list_item__inherit__graph.md5  class_account_list_item_a1050d2d08de8ac6f72975c658f59e982_icgraph.md5  class_account_list_item_a8d92d399568a80640ce6c282801f4ccf_icgraph.map  class_account_widget__inherit__graph.md5  class_add_account_dialog.html  class_add_account_dialog.js  class_add_account_dialog__coll__graph.md5  class_add_account_dialog_ac9dbb98378174403dbcef089d9cab47b_cgraph.map  class_bank_model-members.html  class_bank_model.html  class_bank_model_a3181500149b765e3aa78a3199d9e1326_icgraph.map  class_bank_model_a33fda77509c9faa8d58308a36a6dce0c_icgraph.map  class_bank_model_a34e6085233a49e0c9946d9ed0a62407f_icgraph.map  class_bank_model_a628a3fd7bb06a3d0643bbc1be3e21e55_cgraph.map  class_bank_model_a628a3fd7bb06a3d0643bbc1be3e21e55_cgraph.md5  class_bank_model_aada2aabdd10b84a152bba1599da65f6c_cgraph.map  class_bank_model_afca92249a3aeae8e6c9fc0ee4073db0f_icgraph.map  (+70 more)
docs/html/: _r_e_a_d_m_e_8md.html  accountwidget_8cpp__incl.md5  accountwidget_8h__dep__incl.map  accountwidget_8h__dep__incl.md5  accountwidget_8h__incl.map  accountwidget_8h__incl.md5  accountwidget_8h_source.html  addaccountdialog_8cpp.html  addaccountdialog_8cpp__incl.map  addaccountdialog_8cpp__incl.md5  addaccountdialog_8h__dep__incl.map  addaccountdialog_8h__dep__incl.md5  addaccountdialog_8h__incl.map  addaccountdialog_8h_source.html  bankmodel_8cpp__incl.md5  bankmodel_8h.html  bankmodel_8h__dep__incl.md5  bankmodel_8h__incl.map  bankmodel_8h__incl.md5  bankmodel_8h_source.html  checkanimationwidget_8cpp.html  checkanimationwidget_8cpp__incl.map  checkanimationwidget_8cpp__incl.md5  checkanimationwidget_8h.html  checkanimationwidget_8h.js  checkanimationwidget_8h__dep__incl.map  checkanimationwidget_8h__incl.map  checkanimationwidget_8h__incl.md5  checkanimationwidget_8h_source.html  class_account-members.html  class_account.html  class_account.js  (+98 more)
(+62 files in other folders)
